chore: remove redundant dep